--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
     <div class="container">
       <h1>ツイキャスAPIツール</h1>
 
+      <div class="notice">
+        <p><strong>注意:</strong> 本アプリのAPIは、ツイキャスのAPIの仕様により 30リクエスト/60秒 の制限があります。</p>
+      </div>
+
       <p>サポートしているユーザー情報を取得したいユーザーIDを入力</p>
       <form class="row" id="display-form">
-        <input id="display-input" placeholder="Enter a name..." />
+        <input id="display-input1" placeholder="Enter a name..." />
+        <input id="display-input2" placeholder="(Option)" />
         <button type="submit">取得</button>
       </form>
 
