細かい修正

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
       <h1>ツイキャスAPIツール</h1>
 
       <div class="notice">
-        <p><strong>注意:</strong> 本アプリのAPIは、ツイキャスのAPIの仕様により 30リクエスト/60秒 の制限があります。</p>
+        <p><strong>注意：</strong> 本アプリのAPIは、ツイキャスのAPIの仕様により 30リクエスト/60秒 の制限があります。</p>
+        <P><strong>使い方：</strong> ユーザーIDとオプションで、先頭レコードの指定ができます。指定なしの場合は1番目から取得します。</P>
       </div>
 
-      <p>サポートしているユーザー情報を取得したいユーザーIDを入力</p>
+      <h3><strong>サポートしているユーザー情報を取得したいユーザーIDを入力</strong></h3>
       <form class="row" id="display-form">
         <input id="display-input1" placeholder="Enter a name..." />
         <input id="display-input2" placeholder="(Option)" />
