pointの意味を記載

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <div class="notice">
         <p><strong>注意：</strong> 本アプリのAPIは、ツイキャスのAPIの仕様により 30リクエスト/60秒 の制限があります。</p>
-        <P><strong>使い方：</strong> ユーザーIDとオプションで、先頭レコードの指定ができます。指定なしの場合は1番目から取得します。</P>
+        <P><strong>使い方：</strong> ユーザーID、オプションで先頭レコードの指定ができます。指定なしの場合は1番目から取得します。</P>
       </div>
 
       <h3><strong>サポートしているユーザー情報を取得したいユーザーIDを入力</strong></h3>
