APIをsupportingからsupportersへ変更

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <P><strong>使い方：</strong> ユーザーID、オプションで先頭レコードの指定ができます。指定なしの場合は1番目から取得します。</P>
       </div>
 
-      <h3><strong>サポートしているユーザー情報を取得したいユーザーIDを入力</strong></h3>
+      <h3><strong>サポート一覧を取得したいユーザーIDを入力</strong></h3>
       <form class="row" id="display-form">
         <input id="display-input1" placeholder="Enter a name..." />
         <input id="display-input2" placeholder="(Option)" />
